# HESP_SoSe_2025

Assignment_2/molecular_dynamics/: molecular_dynamics.sh  run_all.sh
Assignment_2/molecular_dynamics/Assignment - 2/: readme.md
Assignment_2/molecular_dynamics/Assignment - 2/input/: generate_input.py
Assignment_2/molecular_dynamics/Assignment - 2/src/: particle.cu  plot_benchmark.py
Assignment_2/molecular_dynamics/Assignment - 2/vtk_final_position/: 500_particles_0999.vtk  50_particles_0999.vtk  attraction_particles_0099.vtk  collision_group_particles_0999.vtk  repulsion_group_particles_0999.vtk  repulsion_particles_0099.vtk  stable_particles_0099.vtk
Assignment_2/molecular_dynamics/benchmark/csv/: benchmark_10_20250525_204520.csv  benchmark_150_20250525_204527.csv  benchmark_200_20250525_204600.csv  benchmark_25_20250525_204523.csv  benchmark_500_20250525_204539.csv
Assignment_2/molecular_dynamics/input/: cli.cu  cli.cuh
Assignment_2/molecular_dynamics/input/particles/: particles_50.txt  particles_collision_clusters_200.txt  (+1 more)
Assignment_2/molecular_dynamics/src/: benchmark.hpp  binning.cu  binning.cuh  main.cu  particle.cuh
molecular_dynamics/: CMakeLists.txt  info.txt  run_all.sh  submit_md.sh
molecular_dynamics/input/: cli.cu  cli.cuh  particles.txt
molecular_dynamics/input/particles/: particles_100.txt  particles_150.txt  particles_200.txt  particles_25.txt  particles_250.txt  particles_500.txt
molecular_dynamics/src/: binning.cu  binning.cuh  main.cu  neighbour.cu  neighbour.cuh  particle.cu  particle.cuh  vtk_writer.cu
(+122 files in other folders)
